--- a/app/tamanios/templates/tamanios/editar_tamanio.html
+++ b/app/tamanios/templates/tamanios/editar_tamanio.html
@@ -17,7 +17,9 @@
                 <select class="form-select" id="categoria" name="categoria_id" required>
                     <option selected disabled>Seleccione una categoría</option>
                     {% for categoria in categorias %}
-                        <option value="{{ categoria.id }}" {% if categoria.id == tamanio.categoria_id %}selected{% endif %}>{{ categoria.nombre }}</option>
+                        <option value="{{ categoria.id }}" {% if categoria.id == tamanio.categoria_id %}selected{% endif %}>
+                            {{ categoria.nombre }}
+                        </option>
                     {% endfor %}
                 </select>
             </div>
