--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 
 
-    <link href="/static/styles.css" rel="stylesheet">
+    <!-- <link href="/static/styles.css" rel="stylesheet"> -->
 </head>
 <body>
     <div class="d-flex">
