agregar modulo de feedbacks

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,7 +50,11 @@
                         <i class="fas fa-cogs me-2"></i>Productos
                     </a>
                 </li>
-
+                <li class="nav-item mb-2">
+                    <a class="nav-link text-white" href="/feedbacks">
+                        <i class="fas fa-comment-dots me-2"></i>Feedbacks
+                    </a>
+                </li>
                 <li class="nav-item mb-2">
                     <a class="nav-link text-white" href="/auth/logout">
                         <i class="fas fa-sign-out-alt me-2"></i>Logout
