agregando modulo de servicios

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,6 +51,11 @@
                     </a>
                 </li>
                 <li class="nav-item mb-2">
+                    <a class="nav-link text-white" href="/servicios">
+                        <i class="fas fa-users me-2"></i>Servicios
+                    </a>
+                </li>                
+                <li class="nav-item mb-2">
                     <a class="nav-link text-white" href="/feedbacks">
                         <i class="fas fa-comment-dots me-2"></i>Feedbacks
                     </a>
