--- a/app/productos/templates/productos/crear_producto.html
+++ b/app/productos/templates/productos/crear_producto.html
@@ -9,19 +9,15 @@
     <div class="card-body">
         <form action="{{ url_for('productos.crear') }}" method="POST" enctype="multipart/form-data" id="form-crear-producto">
             <div class="mb-3">
-                <label for="nombre" class="form-label">Nombre del Producto</label>
+                <label for="nombre" class="form-label fw-bold">Nombre del Producto</label>
                 <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingrese el nombre del producto" required>
             </div>
             <div class="mb-3">
-                <label for="precio" class="form-label">Precio</label>
-                <input type="number" step="0.01" class="form-control" id="precio" name="precio" placeholder="Ingrese el precio del producto" required>
-            </div>
-            <div class="mb-3">
-                <label for="descripcion" class="form-label">Descripción</label>
+                <label for="descripcion" class="form-label fw-bold">Descripción</label>
                 <textarea class="form-control" id="descripcion" name="descripcion" rows="3" placeholder="Ingrese la descripción del producto"></textarea>
             </div>
             <div class="mb-3">
-                <label for="categoria" class="form-label">Categoría</label>
+                <label for="categoria" class="form-label fw-bold">Categoría</label>
                 <select class="form-select" id="categoria" name="categoria_id" required>
                     <option selected disabled>Seleccione una categoría</option>
                     {% for categoria in categorias %}
@@ -56,20 +52,51 @@
                                     </button>
                                     <input type="hidden" name="variant_{{ sizeIndex + 1 }}_{{ variantIndex + 1 }}_status" value="inactive">
                                     <div class="mb-2">
-                                        <label class="form-label">Color</label>
-                                        <select class="form-select variant-field" name="color_{{ sizeIndex + 1 }}_{{ variantIndex + 1 }}">
-                                            <option selected disabled>Seleccione un color</option>
-                                            {% for color in colores %}
-                                            <option value="{{ color.id }}" style="background-color:{{ color.hexadecimal }};">{{ color.nombre }}</option>
-                                            {% endfor %}
-                                        </select>
+                                        <label class="form-label fw-bold">Color</label>
+                                        <div class="d-flex align-items-center mt-2">
+                                            <select class="form-select variant-field me-2" name="color_{{ sizeIndex + 1 }}_{{ variantIndex + 1 }}" onchange="document.getElementById('colorPreview_{{ sizeIndex + 1 }}_{{ variantIndex + 1 }}').style.backgroundColor = this.options[this.selectedIndex].getAttribute('data-bg')">
+                                                <option selected disabled>Seleccione un color</option>
+                                                {% for color in colores %}
+                                                <option value="{{ color.id }}" data-bg="{{ color.hexadecimal }}">{{ color.nombre }}</option>
+                                                {% endfor %}
+                                            </select>
+                                            <div id="colorPreview_{{ sizeIndex + 1 }}_{{ variantIndex + 1 }}" class="rounded-circle" style="width: 30px; height: 30px; border: 1px solid #000;"></div>
+                                        </div>
+                                    </div>                                                                      
+                                    <div class="mb-2">
+                                        <div class="row align-items-center">
+                                            <div class="col-md-2">
+                                                <label class="form-label fw-bold">Stock</label>
+                                            </div>
+                                            <div class="col-md-10">
+                                                <input type="number" class="form-control" name="stock_{{ sizeIndex + 1 }}_{{ variantIndex + 1 }}" placeholder="Stock">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    
+                                    <div class="mb-3">
+                                        <div class="row align-items-center">
+                                            <div class="col-md-2">
+                                                <label for="precio" class="form-label fw-bold">Precio</label>
+                                            </div>
+                                            <div class="col-md-10">
+                                                <input type="number" step="0.01" class="form-control " name="precio_{{ sizeIndex + 1 }}_{{ variantIndex + 1 }}" placeholder="Ingrese el precio del producto">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    
+                                    <div class="mb-3">
+                                        <div class="row align-items-center">
+                                            <div class="col-md-2">
+                                                <label for="capacidad" class="form-label fw-bold">Capacidad</label>
+                                            </div>
+                                            <div class="col-md-10">
+                                                <input type="text" step="0.01" class="form-control" name="capacidad_{{ sizeIndex + 1 }}_{{ variantIndex + 1 }}" placeholder="Ingrese la capacidad del producto">
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="mb-2">
-                                        <label class="form-label">Stock</label>
-                                        <input type="number" class="form-control variant-field" name="stock_{{ sizeIndex + 1 }}_{{ variantIndex + 1 }}" placeholder="Stock">
-                                    </div>
-                                    <div class="mb-2">
-                                        <label class="form-label">Imagen</label>
+                                        <label class="form-label fw-bold">Imagen</label>
                                         <input type="file" class="form-control file-input variant-field" name="image_{{ sizeIndex + 1 }}_{{ variantIndex + 1 }}" accept="image/*">
                                         <div class="mt-2 text-center">
                                             <img id="preview-{{ sizeIndex + 1 }}-{{ variantIndex + 1 }}" class="img-fluid d-none" style="max-height: 150px;" alt="Vista previa">
