--- a/app/servicios/templates/servicios/index.html
+++ b/app/servicios/templates/servicios/index.html
@@ -32,6 +32,7 @@
                     <th>Precio</th>
                     <th>Precio de Oferta</th>
                     <th>Rubro</th>
+                    <th>Imagen</th>
                     <th>Acciones</th>
                 </tr>
             </thead>
@@ -44,6 +45,13 @@
                     <td>{{ servicio.precio | round(2) }}</td>
                     <td>{{ servicio.precio_oferta | round(2) }}</td>
                     <td>{{ servicio.rubro.nombre }}</td>
+                    <td>
+                        {% if servicio.imagen %}
+                            <img src="{{ url_for('static', filename='uploads/' + servicio.imagen) }}" alt="Imagen de {{ servicio.nombre_servicio }}" class="img-thumbnail" style="max-width: 100px; height: auto;">
+                        {% else %}
+                            <span>No disponible</span>
+                        {% endif %}
+                    </td>
                     <td>
                         <a href="#" class="btn btn-outline-info btn-sm me-1" data-bs-toggle="modal" data-bs-target="#viewModal{{ servicio.id }}">
                             <i class="fas fa-eye"></i>
@@ -64,6 +72,11 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
+                                        {% if servicio.imagen %}
+                                            <img src="{{ url_for('static', filename='uploads/' + servicio.imagen) }}" alt="Imagen de {{ servicio.nombre_servicio }}" class="img-fluid mt-3">
+                                        {% else %}
+                                            <span>No disponible</span>
+                                        {% endif %}
                                         <p><strong>ID:</strong> {{ servicio.id }}</p>
                                         <p><strong>Nombre del Servicio:</strong> {{ servicio.nombre_servicio }}</p>
                                         <p><strong>Descripción:</strong> {{ servicio.descripcion }}</p>
