--- a/app/categorias/templates/categorias/crear_categoria.html
+++ b/app/categorias/templates/categorias/crear_categoria.html
@@ -12,6 +12,15 @@
                 <label for="nombre" class="form-label">Nombre de la Categoría</label>
                 <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingrese el nombre de la categoría" required>
             </div>
+            <div class="mb-3">
+                <label for="rubro_id" class="form-label">Seleccione un Rubro</label>
+                <select class="form-select" id="rubro_id" name="rubro_id" required>
+                    <option value="" selected disabled>Seleccione un rubro...</option>
+                    {% for rubro in rubros %}
+                        <option value="{{ rubro.id }}">{{ rubro.nombre }}</option>
+                    {% endfor %}
+                </select>
+            </div>
             <div class="text-end">
                 <button type="submit" class="btn btn-primary">
                     <i class="fas fa-save"></i> Guardar
@@ -20,4 +29,5 @@
         </form>
     </div>
 </div>
+
 {% endblock %}
